// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button #1 - Default props. 1`] = `
.c0 {
  color: #FFF;
  background-color: #00AFB1;
  font-family: inherit;
  font-size: 20px;
  font-weight: bold;
  padding: 15px 30px;
  border: none;
  border-radius: 20px;
  outline: 0;
  cursor: pointer;
  -webkit-transition: color 0.3s ease-out,background-color 0.3s ease-out;
  transition: color 0.3s ease-out,background-color 0.3s ease-out;
}

.c0:hover {
  background-color: #008c8d;
}

.c0:focus {
  box-shadow: 0 0 0 0.2rem rgba(0,175,177,0.3);
}

<button
  className="c0"
/>
`;

exports[`Button #2 - All props present. 1`] = `
.c0 {
  color: yellow;
  background-color: transparent;
  font-family: Arial;
  font-size: 32px;
  font-weight: bold;
  padding: 15px 30px;
  border: none;
  border-radius: 0;
  outline: 0;
  cursor: pointer;
  -webkit-transition: color 0.3s ease-out,background-color 0.3s ease-out;
  transition: color 0.3s ease-out,background-color 0.3s ease-out;
}

.c0:hover {
  color: blue;
}

<button
  className="c0"
/>
`;

exports[`Button #3 - Background-color, hover-color. 1`] = `
.c0 {
  color: #FFF;
  background-color: azure;
  font-family: inherit;
  font-size: 20px;
  font-weight: bold;
  padding: 15px 30px;
  border: none;
  border-radius: 20px;
  outline: 0;
  cursor: pointer;
  -webkit-transition: color 0.3s ease-out,background-color 0.3s ease-out;
  transition: color 0.3s ease-out,background-color 0.3s ease-out;
}

.c0:hover {
  color: yellow;
}

.c0:hover {
  background-color: #cff;
}

.c0:focus {
  box-shadow: 0 0 0 0.2rem #a3ffff;
}

<button
  className="c0"
/>
`;
